# code

./: CMakeLists.txt  arm-none-eabi.cmake  index.html  openocd.cfg
.claude/: settings.local.json
css/: mc-style.css
js/: mc-app.js  mc-background.js  mc-data.js  mc-smoothscroll.js
